--- a/html/css/style.css
+++ b/html/css/style.css
@@ -368,6 +368,54 @@
 }
 
 .skill-list {
+}
+.skill-list li {
+}
+.skill-list .ball {
+  position: relative;
+  width: 300px;
+  height: 300px;
+  /* background: circle at 75% 30%, #fff 5px, #a16bfe 8%, #7327f5 60%, #a16bfe 100%; */
+  background: radial-gradient(circle at 75% 30%, #fff 5px, #a16bfe 8%, #7327f5 60%, #a16bfe 100%);
+  border-radius: 50%;
+  box-shadow: inset 0 0 20px #fff, inset 10px 0 46px #eaf5fc, inset -20px -60px 100px #fde9ea, inset 0 50px 140px #fde9ea, 0 0 90px #fff;
+  animation: float 3.5s ease-in-out alternate infinite;
+}
+
+.skill-list .ball button {
+  position: relative;
+}
+.skill-list .shadow {
+  position: absolute;
+  top: 70px;
+  width: 240px;
+  height: 30px;
+
+  background-color: #b490b2;
+  border-radius: 50%;
+  animation: expand 3.5s alternate infinite;
+}
+
+@keyframes float {
+  0% {
+    transform: translateY(0px);
+  }
+  100% {
+    transform: translateY(-5rem);
+  }
+}
+
+@keyframes expand {
+  0% {
+    transform: scale(0.7);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+
+/* 
+.skill-list {
   position: absolute;
 }
 
@@ -395,7 +443,7 @@
 }
 .skill-list button:nth-child(4) {
   background-color: var(--yellow);
-}
+} */
 
 /* CONTACT SECTION */
 .contact-section {
@@ -405,6 +453,7 @@
 .contact-section .contact-title-box {
   background-color: var(--yellow);
 }
+
 .contact-section .contact-title-box h2 {
   font-size: 2rem;
 }
@@ -556,7 +605,7 @@
 
     border-radius: 5px 5px 0 0;
 
-    padding: 1rem 0;
+    padding: 0.7rem 0;
   }
 
   .info-skill-box li:hover {
@@ -598,5 +647,49 @@
   .info-skill-box button {
     width: 13vw;
     height: 13vw;
+
+    font-weight: normal;
+    font-size: 0.8rem;
+  }
+
+  /* WORK SECTION */
+  .project-section .inner {
+    flex-direction: row-reverse;
+    /* overflow-x: hidden; */
+  }
+
+  .project-section .project-list-box {
+    width: 100%;
+
+    transition: width 2s;
+  }
+
+  .project-section .project-detail-box {
+    width: 75%;
+  }
+
+  .project-section .project-list-wrap {
+    max-height: 80vh;
+    overflow-y: auto;
+  }
+
+  .project-section .project-list-wrap li {
+    padding: 0 1rem;
+    height: 4em;
+
+    font-size: 1.2rem;
+  }
+
+  .project-section .project-list-wrap li:hover {
+    padding-left: 0;
+  }
+
+  /* small-list */
+  .project-section .project-list-box.small-list {
+    width: 25%;
+  }
+
+  .project-section .project-list-box.small-list b {
+    display: none;
   }
 }
